worked on alignment issues

--- a/styles.css
+++ b/styles.css
@@ -107,7 +107,7 @@
     background-color:#ffbe56;
     border-top-right-radius: 6px;
     border-bottom-right-radius: 6px;
-    padding: 19px 15px 7px 16px;
+    padding: 15px 15px 11px 16px;
     color: white;
     width: 35%;
     line-height:17px;
